# cmake_with_rust_demo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  generate_cpp_headers.sh  main.cpp
rust-lib/: Cargo.toml
src/: lib.rs
test-lib/: .gitignore  Cargo.toml  generate_cpp_headers.sh
